objects/WO_ValueChainPlayer__c.object
<CustomObject>
    <fields>
        <fullName>AccountDetails__c</fullName>
        <description>Account details text field (in case where the account field cannot be filled)</description>
        <label>Account details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountRole__c</fullName>
        <description>SR0</description>
        <label>Account Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Delegated as Primary</fullName>
                </value>
                <value>
                    <fullName>Distributors / Resellers</fullName>
                </value>
                <value>
                    <fullName>Electrical Contractor</fullName>
                </value>
                <value>
                    <fullName>EPC</fullName>
                </value>
                <value>
                    <fullName>Fulfillment Channel</fullName>
                </value>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
                <value>
                    <fullName>Lead Finder</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Panel Builders</fullName>
                </value>
                <value>
                    <fullName>Purchase Account Name</fullName>
                </value>
                <value>
                    <fullName>Specifier</fullName>
                </value>
                <value>
                    <fullName>Subcontractor</fullName>
                </value>
                <value>
                    <fullName>System Integrator</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R01</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Order Value Chain Players</relationshipLabel>
        <relationshipName>Work_Order_Value_Chain_Players</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactRole__c</fullName>
        <label>Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Financial Buyer</fullName>
                </value>
                <value>
                    <fullName>Internal Enabler</fullName>
                </value>
                <value>
                    <fullName>Operational end user</fullName>
                </value>
                <value>
                    <fullName>Political Influencer</fullName>
                </value>
                <value>
                    <fullName>Primary Customer Contact</fullName>
                </value>
                <value>
                    <fullName>Primary Partner Contact</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Subject Matter Expert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SR0</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Order Value Chain Players</relationshipLabel>
        <relationshipName>Work_Order_Value_Chain_Players</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TECH_AccountDetails__c</fullName>
        <description>Id to avoid created 2 VCP with Account detail for the same Work order</description>
        <label>TECH_AccountDetails</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TECH_ProjectManager__c</fullName>
        <description>Avoid to create 2 VCP with a PM for the same Work order</description>
        <label>TECH_ProjectManager</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Order_Value_Chain_Players</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkOrder__c</fullName>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Work Order Value Chain Players</relationshipLabel>
        <relationshipName>WO_ValueChainPlayers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Work Order Value Chain Player</label>
    <nameField>
        <displayFormat>WOVCP-{0000}</displayFormat>
        <label>Work Order Value Chain Player ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Value Chain Players</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>WOVCP_Account_PM</fullName>
        <active>true</active>
        <description>Prevent a user to fil both account and contact</description>
        <errorConditionFormula>AND(
		NOT($User.BypassVR__c),
OR(
(!ISBLANK( Account__c ) &amp;&amp; (!ISBLANK( Contact__c ) || !ISBLANK( User__c ) || !ISPICKVAL( ContactRole__c , &quot;&quot;) ))
|| ( !ISBLANK( AccountDetails__c ) &amp;&amp; (!ISBLANK( Contact__c ) || !ISBLANK( User__c ) || !ISPICKVAL( ContactRole__c , &quot;&quot;) ))
|| ( !ISPICKVAL( AccountRole__c , &quot;&quot;) &amp;&amp; (!ISBLANK( Contact__c ) || !ISBLANK( User__c ) || !ISPICKVAL( ContactRole__c , &quot;&quot;) ))
|| (!ISBLANK( Contact__c ) &amp;&amp; (!ISBLANK( Account__c ) || !ISBLANK( AccountDetails__c ) || !ISPICKVAL( AccountRole__c , &quot;&quot;) ))
|| ( !ISBLANK( User__c ) &amp;&amp; (!ISBLANK( Account__c ) || !ISBLANK( AccountDetails__c ) || !ISPICKVAL( AccountRole__c , &quot;&quot;) ))
|| ( !ISPICKVAL( ContactRole__c , &quot;&quot;) &amp;&amp; (!ISBLANK( Account__c ) || !ISBLANK( AccountDetails__c ) || !ISPICKVAL( AccountRole__c , &quot;&quot;) ))
)
)</errorConditionFormula>
        <errorMessage>You cannot fill both Account and contact user</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WOVCP_Id_role</fullName>
        <active>true</active>
        <description>user cannot modify the a wcp with a account to a vcp with a contact (he will have to create another one)</description>
        <errorConditionFormula>AND(
		NOT($User.BypassVR__c),

OR(
( PRIORVALUE(Account__c ) != null &amp;&amp; (!ISBLANK( Contact__c ) || !ISBLANK( User__c ) || !ISPICKVAL( ContactRole__c , &quot;&quot;) ))
|| (PRIORVALUE(AccountDetails__c) != null &amp;&amp; (!ISBLANK( Contact__c ) || !ISBLANK( User__c ) || !ISPICKVAL( ContactRole__c , &quot;&quot;) ))
|| ( PRIORVALUE(AccountRole__c) != &quot;&quot; &amp;&amp; (!ISBLANK( Contact__c ) || !ISBLANK( User__c ) || !ISPICKVAL( ContactRole__c , &quot;&quot;) ))
|| (PRIORVALUE(Contact__c ) != null &amp;&amp; (!ISBLANK( Account__c ) || !ISBLANK( AccountDetails__c ) || !ISPICKVAL( AccountRole__c , &quot;&quot;) ))
|| (PRIORVALUE(User__c ) != null &amp;&amp; (!ISBLANK( Account__c ) || !ISBLANK( AccountDetails__c ) || !ISPICKVAL( AccountRole__c , &quot;&quot;) ))
|| (PRIORVALUE(ContactRole__c) != &quot;&quot; &amp;&amp; (!ISBLANK( Account__c ) || !ISBLANK( AccountDetails__c ) || !ISPICKVAL( AccountRole__c , &quot;&quot;) ))
)
)</errorConditionFormula>
        <errorMessage>You can&apos;t modify this VCP to change his type (account/contact)</errorMessage>
    </validationRules>
</CustomObject>